Board and submissions

--- a/submissions.html
+++ b/submissions.html
@@ -1,40 +1,44 @@
-[% PROCESS header
-     title = "The R Journal >> Submissions"
-%]
-
-[% PROCESS navigation submissions = "current_page_item" %]
-
-<body>
-<div id="content">
+---
+layout: default
+title: Submissions
+---
+   
 <h1>Submissions</h1>
-Please send submissions to regular columns (Programmer's Niche, Help
-Desk) to the respective column editor, all other submissions to the
-Editor-in-Chief or a member of the editorial board.
-<p>Please read the <a href="latex/RJauthorguide.pdf">Instructions for Authors</a>, which explains how to prepare an article for submission to <span style="font-style: italic;">The R Journal</span>.
-</p>
-<p>
-The following files provide a template
-for preparing an article for submission to the R Journal:
+
+<h2>Instructions for authors</h2>
+
+<p>Please read the <a href="share/author-guide.pdf">Instructions for Authors</a>, which explains how to prepare an article for submission to <em>The R Journal</em>.</p>
+
+<p>The following files provide a template for preparing an article for submission to the R Journal:</p>
+
 <ul>
-  <li> LaTeX style file:
-       <a href="latex/RJournal.sty">RJournal.sty</a>.
-  <li> fake Master LaTeX file:
-       <a href="latex/RJwrapper.tex">RJwrapper.tex</a>.
-  <li> article template:
-       <a href="latex/RJtemplate.tex">RJtemplate.tex</a>.
-</li>
+  <li>LaTeX style file: <a href="share/RJournal.sty">RJournal.sty</a>.</li>
+
+  <li>fake Master LaTeX file: <a href="share/RJwrapper.tex">RJwrapper.tex</a>.</li>
+
+  <li>article template: <a href="share/RJtemplate.tex">RJtemplate.tex</a>.</li>
 </ul>
-Download the files into a directory, run pdflatex a couple of times
-on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be
-typeset in an issue of <span style="font-style: italic;">The R Journal</span>.
-You can also download a copy of <a href="latex/RJwrapper.pdf">RJwrapper.pdf</a>.
 
-<p>The LaTeX style file used by <span style="font-style: italic;">The R Journal</span> is derived
-from the source <a href="latex/RJournal.dtx">RJournal.dtx</a> and is documented in the file 
-<a href="latex/RJournal.pdf">RJournal.pdf</a>.  These two files are made available for completeness,
-and in order to comply with the license of docstrip.
-You do not need them for a submission to <span style="font-style: italic;">The R Journal</span>.
+<p>Download the files into a directory, run pdflatex a couple of times on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be typeset in an issue of <emph>The R Journal</emph>. You can also download a copy of <a href="share/RJwrapper.pdf">RJwrapper.pdf</a>.</p>
 
-</p>
+<p>The LaTeX style file used by <em>The R Journal</em> is derived from the source <a href="share/RJournal.dtx">RJournal.dtx</a> and is documented in the file <a href="share/RJournal.pdf">RJournal.pdf</a>. These two files are made available for completeness, and in order to comply with the license of docstrip. You do not need them for a submission to <em>The R Journal</em>.</p>
+
+<h2>Submit online</h2>
+
+<div id="wufoo-m7x2p1">
+<a href="http://hadley.wufoo.com/forms/m7x2p1">Please submit online </a>.
 </div>
-</body>
+<script type="text/javascript">var m7x2p1;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'hadley', 
+'formHash':'m7x2p1', 
+'autoResize':true,
+'height':'1042',
+'async':true,
+'header':'show'};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { m7x2p1 = new WufooForm();m7x2p1.initialize(options);m7x2p1.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
