--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: R Journal
+title: Welcome
 ---
 
 <h1>About The R Journal</h1><em>The R Journal</em> is the open access, refereed journal of the <a href="http://www.r-project.org/" target="_top">R project</a> for statistical computing. It features short to medium length articles covering topics that might be of interest to users or developers of R, including
