--- a/accepted.html
+++ b/accepted.html
@@ -1,7 +1,17 @@
 ---
-layout: issue
+layout: default
 title: Accepted articles
-issue: accepted
 ---
 
 <h1>Articles Accepted for Future Issues</h1>
+
+<ul>
+{% for issue in site.issues %}
+  {% if issue.issue == "accepted" %}
+  {% for article in issue.articles %} 
+    <li><p><a href="archive/{{issue.issue}}/{{article.url}}">{{article.title}}</a>.<br/>
+      {{article.authors}}</p></li>
+  {% endfor %}
+  {% endif %}
+{% endfor %}
+</ul>
