--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ title: Welcome
 
   <dd>announcements of conferences related to R.</dd>
 
-  <dt style="clear:left">Conference reports</dt>
+  <dt style="clear:left">Conference reports:</dt>
+
+  <dd>overviews of past conferences related to R.</dd>
 </dl>
-</div>
