still trying to style submission form

--- a/submissions2.html
+++ b/submissions2.html
@@ -26,8 +26,8 @@ title: Submissions
 <h3>R journal submission</h3>
 
 <p>To submit a new article to the R journal, please complete the
-fields below.  If you have problems with the process, please contact
-<code>deepayan.sarkar@r-project.org</code>. </p>
+fields below.  If you have problems, please contact
+<code>&lt;deepayan.sarkar@r-project.org&gt;</code>. </p>
 
 <p>Please do not use this form for resubmissions or revisions - email
 your editor directly.</p>
