--- a/board.html
+++ b/board.html
@@ -6,15 +6,14 @@ title: Editorial board
 <dl>
   <dt>Editor-in-Chief:</dt>
 
-  <dd>Hadley Wickham</dd>
+  <dd>Deepayan Sarkar</dd>
 
   <dd><a href=
-  "mailto:hadley.wickham@r-project.org">hadley.wickham@r-project.org</a></dd>
+  "mailto:deepayan.sarkar@r-project.org">deepayan.sarkar@r-project.org</a></dd>
 
   <dt>Editorial Board:</dt>
 
-  <dd>Martyn Plummer, Deepayan Sarkar and Bettina
-  Gr&uuml;n</dd>
+  <dd>Hadley Wickham, Bettina Gr&uuml;n and Michael Lawrence</dd>
 
   <!--<dt>Editor Programmer's Niche: </dt>
 <dd>Bill Venables </dd>-->
