more updates for new issue

--- a/board.html
+++ b/board.html
@@ -6,14 +6,14 @@ title: Editorial board
 <dl>
   <dt>Editor-in-Chief:</dt>
 
-  <dd>Deepayan Sarkar</dd>
+  <dd>Bettina Gr&uuml;n</dd>
 
   <dd><a href=
-  "mailto:deepayan.sarkar@r-project.org">deepayan.sarkar@r-project.org</a></dd>
+  "mailto:Bettina.Gruen@jku.at">Bettina.Gruen@jku.at</a></dd>
 
   <dt>Editorial Board:</dt>
 
-  <dd>Hadley Wickham, Bettina Gr&uuml;n and Michael Lawrence</dd>
+  <dd>Deepayan Sarkar, Michael Lawrence and Roger Bivand</dd>
 
   <!--<dt>Editor Programmer's Niche: </dt>
 <dd>Bill Venables </dd>-->
