R News: link to CRAN instead of r-project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: Welcome
   <li>provide code examples that are reproducible.</li>
 </ul>
 
-<p>Continuing from <em><a href="http://www.r-project.org/doc/Rnews/index.html">R News</a></em>, <em>The R Journal</em> also has a news section, including information on:</p>
+<p>Continuing from <em><a href="http://cran.r-project.org/doc/Rnews/index.html">R News</a></em>, <em>The R Journal</em> also has a news section, including information on:</p>
 
 <dl class="inline">
   <dt>Changes in R:</dt>
