--- a/board.html
+++ b/board.html
@@ -6,14 +6,14 @@ title: Editorial board
 <dl>
   <dt>Editor-in-Chief:</dt>
 
-  <dd>Bettina Gr&uuml;n</dd>
+  <dd>Michael Lawrence</dd>
 
   <dd><a href=
-  "mailto:Bettina.Gruen@jku.at">Bettina.Gruen@jku.at</a></dd>
+  "mailto:Lawrence.Michael@gene.com">Lawrence.Michael@gene.com</a></dd>
 
   <dt>Editorial Board:</dt>
 
-  <dd>Deepayan Sarkar, Michael Lawrence and Roger Bivand</dd>
+  <dd>Bettina Gr&uuml;n, Roger Bivand and John Verzani</dd>
 
   <!--<dt>Editor Programmer's Niche: </dt>
 <dd>Bill Venables </dd>-->
