--- a/submissions.html
+++ b/submissions.html
@@ -16,7 +16,8 @@ title: Submissions
 
   <li>fake Master LaTeX file: <a href="share/RJwrapper.tex">RJwrapper.tex</a>.</li>
 
-  <li>article template: <a href="share/RJtemplate.tex">RJtemplate.tex</a> (and figure: <a href="share/Rlogo.png">Rlogo.png</a>).</li>
+  <li>article template: <a href="share/RJtemplate.tex">RJtemplate.tex</a> (including figure: <a href="share/Rlogo.png">Rlogo.png</a>
+    and bibliography: <a href="share/RJreferences.bib">RJreferences.bib</a>).</li>
 </ul>
 
 <p>Download the files into a directory, run pdflatex a couple of times on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be typeset in an issue of <emph>The R Journal</emph>. You can also download a copy of <a href="share/RJwrapper.pdf">RJwrapper.pdf</a>.</p>
