submissions.html: added link to RJreferences.bib

--- a/submissions.html
+++ b/submissions.html
@@ -29,7 +29,7 @@ title: Submissions
 <p>To submit a new article to the R journal, please complete the
 fields below.  If you have problems, please contact the
 Editor-in-Chief at 
-<code>&lt;Bettina.Gruen@jku.at&gt;</code>. </p>
+<code>&lt;Lawrence.Michael@gene.com&gt;</code>. </p>
 
 <p>Please do not use this form for resubmissions or revisions - email
 your editor directly.</p>
