change board names

--- a/board.html
+++ b/board.html
@@ -6,19 +6,19 @@ title: Editorial board
 <dl>
   <dt>Editor-in-Chief:</dt>
 
-  <dd>Michael Lawrence</dd>
+  <dd>Roger Bivand</dd>
 
   <dd><a href=
-  "mailto:Lawrence.Michael@gene.com">Lawrence.Michael@gene.com</a></dd>
+  "mailto:Roger.Bivand@nhh.no">Roger.Bivand@nhh.no</a></dd>
 
   <dt>Editorial Board:</dt>
 
-  <dd>Bettina Gr&uuml;n, Roger Bivand and John Verzani</dd>
+  <dd>Michael Lawrence, John Verzani and Norman Matloff</dd>
 
   <!--<dt>Editor Programmer's Niche: </dt>
 <dd>Bill Venables </dd>-->
 
-  <dt>Editor Help Desk:</dt>
+  <!--<dt>Editor Help Desk:</dt>
 
   <dd>Uwe Ligges</dd>
 
@@ -34,7 +34,7 @@ title: Editorial board
 
   <dd>USA</dd>
 
-  <dd><tt>gkerns@ysu.edu</tt></dd>
+  <dd><tt>gkerns@ysu.edu</tt></dd>-->
 
   <dt>Email of editors:</dt>
 
