--- a/index.html
+++ b/index.html
@@ -3,27 +3,9 @@ layout: default
 title: Welcome
 ---
 
-<h1>About The R Journal</h1><em>The R Journal</em> is the open access, refereed journal of the <a href="http://www.r-project.org/" target="_top">R project</a> for statistical computing. It features short to medium length articles covering topics that might be of interest to users or developers of R, including
+<h1>About The R Journal</h1><em>The R Journal</em> is the open access, refereed journal of the <a href="https://www.r-project.org/" target="_top">R project</a> for statistical computing. It features short to medium length articles covering topics that should be of interest to users or developers of R.
 
-<dl class="inline">
-  <dt>Add-on packages:</dt>
-
-  <dd>short introductions to R extension packages.</dd>
-
-  <dt>Programmer's Niche:</dt>
-
-  <dd>hints for programming in R.</dd>
-
-  <dt>Help Desk:</dt>
-
-  <dd>hints for newcomers explaining aspects of R that might not be so obvious from reading the manuals and FAQs.</dd>
-
-  <dt>Applications:</dt>
-
-  <dd>demonstrating how a new or existing technique can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.</dd>
-</dl>
-
-<p><em>The R Journal</em> intends to reach a wide audience and have a fast-track but thorough review process. Papers are expected to be reasonably short, clearly written, not too technical, and of course focused on R. Authors of refereed articles should take care to:
+<p><em>The R Journal</em> intends to reach a wide audience and have a thorough review process. Papers are expected to be reasonably short, clearly written, not too technical, and of course focused on R. Authors of refereed articles should take care to:
 
 <ul>
   <li>put their contribution in context, in particular discuss related R functions or packages;</li>
@@ -32,6 +14,28 @@ title: Welcome
 
   <li>provide code examples that are reproducible.</li>
 </ul>
+
+<p>Following revision of the content description of <em>The R Journal</em>, from January 2017 submitted articles may include:</p>
+
+<dl class="inline">
+  
+  <dt>Reviews and proposals:</dt>
+  
+  <dd>surveying and discussing challenges and opportunities of potential importance for the broader R community, including proposals and proof-of-concept implementations.</dd>
+  
+  <dt>Comparisons and benchmarking:</dt>
+  
+  <dd>of implementations in base-R and contributed packages with each other, and where relevant with implementations in other software systems.</dd>
+  
+  <dt>Applications:</dt>
+
+  <dd>demonstrating how new or existing techniques can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.</dd>
+
+  <dt>Add-on packages:</dt>
+
+  <dd>short introductions to contributed R packages that are already available on CRAN or Bioconductor, and going beyond package vignettes in aiming to provide broader context and to attract a wider readership than package users. Authors need to make a strong case for such introductions, based for example on novelty in implementation and use of R, or the introduction of new data structures representing general architectures that invite re-use.</dd>
+
+</dl>
 
 <p>Continuing from <em><a href="http://www.r-project.org/doc/Rnews/index.html">R News</a></em>, <em>The R Journal</em> also has a news section, including information on:</p>
 
