--- a/submissions.html
+++ b/submissions.html
@@ -29,7 +29,7 @@ title: Submissions
 <p>To submit a new article to the R journal, please complete the
 fields below.  If you have problems, please contact the
 Editor-in-Chief at 
-<code>&lt;Lawrence.Michael@gene.com&gt;</code>. </p>
+<code>&lt;Roger.Bivand@nhh.no&gt;</code>. </p>
 
 <p>Please do not use this form for resubmissions or revisions - email
 your editor directly.</p>
@@ -52,12 +52,12 @@ your editor directly.</p>
 <input type="checkbox" name="c1">I have read the instructions for authors</input><br>
 <input type="checkbox" name="c2">I am using the latest version of the style file</input><br>
 <input type="checkbox" name="c3">My bibliography is stored in a separate bibtex (.bib) file</input><br>
-<input type="checkbox" name="c4">My article is called lastname.tex and I have updated RJwrapper.tex</input><br>
+<input type="checkbox" name="c4">My article is called lastname.tex, my reproduction script is called lastname.R, and I have updated RJwrapper.tex</input><br>
 <input type="checkbox" name="c5">I acknowledge that if accepted my article will be published with CC-BY license</input><br>
 <input type="checkbox" name="c6">The manuscript has not been published in a peer reviewed journal, and is not currently under review for another journal</input><br>
 <input type="checkbox" name="c7">All authors agree to submission of the article to the R Journal</input>
 
-<p>If any additional latex packages are required to build your article, please list here separated by commas.<br><input type="text" name="latexpkgs" value="" /></p>
+<p>If any absolutely essential additional latex packages are required to build your article, please list here separated by commas.<br><input type="text" name="latexpkgs" value="" /><br>The editors reserve the right to remove such additional latex packages, so it is always best to avoid their use.</p>
 
 
 <p><input type="submit" /></p>
