--- a/board.html
+++ b/board.html
@@ -9,7 +9,7 @@ title: Editorial board
   <dd>Roger Bivand</dd>
 
   <dd><a href=
-  "mailto:Roger.Bivand@nhh.no">Roger.Bivand@nhh.no</a></dd>
+  "mailto:r-journal@r-project.org">r-journal@r-project.org</a></dd>
 
   <dt>Editorial Board:</dt>
 
