--- a/submissions.html
+++ b/submissions.html
@@ -20,7 +20,7 @@ title: Submissions
     and bibliography: <a href="share/RJreferences.bib">RJreferences.bib</a>).</li>
 </ul>
 
-<p>Download the files into a directory, run pdflatex a couple of times on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be typeset in an issue of <emph>The R Journal</emph>. You can also download a copy of <a href="share/RJwrapper.pdf">RJwrapper.pdf</a>.</p>
+<p>Download the files into a directory, run tools::texi2pdf inside R a couple of times on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be typeset in an issue of <emph>The R Journal</emph>. You can also download a copy of <a href="share/RJwrapper.pdf">RJwrapper.pdf</a>.</p>
 
 <h2>Submit online</h2>
 
@@ -29,7 +29,7 @@ title: Submissions
 <p>To submit a new article to the R journal, please complete the
 fields below.  If you have problems, please contact the
 Editor-in-Chief at 
-<code>&lt;Roger.Bivand@nhh.no&gt;</code>. </p>
+<code>&lt;r-journal@r-project.org&gt;</code>. </p>
 
 <p>Please do not use this form for resubmissions or revisions - email
 your editor directly.</p>
@@ -52,7 +52,7 @@ your editor directly.</p>
 <input type="checkbox" name="c1">I have read the instructions for authors</input><br>
 <input type="checkbox" name="c2">I am using the latest version of the style file</input><br>
 <input type="checkbox" name="c3">My bibliography is stored in a separate bibtex (.bib) file</input><br>
-<input type="checkbox" name="c4">My article is called lastname.tex, my reproduction script is called lastname.R, and I have updated RJwrapper.tex</input><br>
+<input type="checkbox" name="c4">My article is called lastname.tex, my graphics files are PDF and/or PNG, my reproduction script is called lastname.R, and I have updated RJwrapper.tex</input><br>
 <input type="checkbox" name="c5">I acknowledge that if accepted my article will be published with CC-BY license</input><br>
 <input type="checkbox" name="c6">The manuscript has not been published in a peer reviewed journal, and is not currently under review for another journal</input><br>
 <input type="checkbox" name="c7">All authors agree to submission of the article to the R Journal</input>
