--- a/board.html
+++ b/board.html
@@ -3,40 +3,9 @@ layout: default
 title: Editorial board
 ---
 
-<dl>
-  <dt>Editor-in-Chief:</dt>
+<p><b>Editor-in-Chief:</b><br>
+Roger Bivand<br><a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
+<p><b>Editorial Board:</b><br>
+Michael Lawrence, John Verzani and Norman Matloff<br>
+Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
 
-  <dd>Roger Bivand</dd>
-
-  <dd><a href=
-  "mailto:r-journal@r-project.org">r-journal@r-project.org</a></dd>
-
-  <dt>Editorial Board:</dt>
-
-  <dd>Michael Lawrence, John Verzani and Norman Matloff</dd>
-
-  <!--<dt>Editor Programmer's Niche: </dt>
-<dd>Bill Venables </dd>-->
-
-  <!--<dt>Editor Help Desk:</dt>
-
-  <dd>Uwe Ligges</dd>
-
-  <dt>Editor Book Reviews:</dt>
-
-  <dd>G. Jay Kerns</dd>
-
-  <dd>Department of Mathematics and Statistics</dd>
-
-  <dd>Youngstown State University</dd>
-
-  <dd>Youngstown, Ohio 44555-0002</dd>
-
-  <dd>USA</dd>
-
-  <dd><tt>gkerns@ysu.edu</tt></dd>-->
-
-  <dt>Email of editors:</dt>
-
-  <dd><em>firstname.lastname</em><tt>@r-project.org</tt></dd>
-</dl>
