Add page header to board

--- a/board.html
+++ b/board.html
@@ -3,6 +3,8 @@ layout: default
 title: Editorial board
 ---
 
+<h1>Editorial board</h1>
+
 <p><b>Editor-in-Chief:</b><br>
 Roger Bivand<br><a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
 <p><b>Editorial Board:</b><br>
