--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>About The R Journal</h1><em>The R Journal</em> is the open access, refereed journal of the <a href="https://www.r-project.org/" target="_top">R project</a> for statistical computing. It features short to medium length articles covering topics that should be of interest to users or developers of R.
+<h1>The R Journal</h1><em>The R Journal</em> is the open access, refereed journal of the <a href="https://www.r-project.org/" target="_top">R project</a> for statistical computing. It features short to medium length articles covering topics that should be of interest to users or developers of R.
 
 <p><em>The R Journal</em> intends to reach a wide audience and have a thorough review process. Papers are expected to be reasonably short, clearly written, not too technical, and of course focused on R. Authors of refereed articles should take care to:
 
