--- a/submissions.html
+++ b/submissions.html
@@ -3,7 +3,7 @@ layout: default
 title: Submissions
 ---
    
-<h1>Submissions</h1>
+<h1>The R Journal: Submissions</h1>
 
 <h2>Instructions for authors</h2>
 
