--- a/board.html
+++ b/board.html
@@ -3,7 +3,7 @@ layout: default
 title: Editorial board
 ---
 
-<h1>Editorial board</h1>
+<h1>The R Journal: Editorial board</h1>
 
 <p><b>Editor-in-Chief:</b><br>
 Roger Bivand<br><a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
