--- a/board.html
+++ b/board.html
@@ -6,8 +6,25 @@ title: Editorial board
 <h1>The R Journal: Editorial board</h1>
 
 <p><b>Editor-in-Chief:</b><br>
-Roger Bivand<br><a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
-<p><b>Editorial Board:</b><br>
-Michael Lawrence, John Verzani and Norman Matloff<br>
+Roger Bivand, Norwegian School of Economics, Bergen, Norway<br><a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
+<p><b>Executive editors:</b><br>
+Michael Lawrence, Genentech, Inc., San Francisco, USA<br>
+John Verzani, City University of New York, USA<br>
+Norman Matloff, University of California, Davis, USA<br>
 Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
-
+<p><b>Editorial advisory board:</b><br>
+Bettina Gruen, Johannes Kepler Universität Linz, Austria<br>
+Deepayan Sarkar, Indian Statistical Institute, Delhi, India<br>
+Friedrich Leisch, University of Natural Resources and Life Sciences, Vienna, Austria<br>
+Hadley Wickham, RStudio, Houston, Texas, USA<br>
+Heather Turner, University of Warwick, Coventry, UK<br>
+John Fox, McMaster University, Hamilton, Ontario, Canada<br>
+Kurt Hornik, WU Wirtschaftsuniversität Wien, Vienna, Austria<br>
+Paul Murrell, University of Auckland, New Zealand<br>
+Peter Dalgaard, Copenhagen Business School, Denmark<br>
+Martyn Plummer, International Agency for Research on Cancer, Lyon, France<br>
+Vincent Carey, Harvard Medical School, Boston, USA<br>
+Torsten Hothorn, University of Zurich, Switzerland<br>
+</p>
+<p><b>Governance:</b><br>
+<i>The R Journal</i> is the open access, refereed journal of the <a href="https://www.r-project.org">R project</a> for statistical computing. It is run under the auspices of the <a href="https://www.r-project.org/foundation/">R Foundation</a>, and editors of the Journal are appointed by the <a href="https://www.r-project.org/foundation/board.html">board</a> of the Foundation.</p>
