tidy submissions - now bundle template

--- a/submissions.html
+++ b/submissions.html
@@ -7,20 +7,23 @@ title: Submissions
 
 <h2>Instructions for authors</h2>
 
-<p>Please read the <a href="share/author-guide.pdf">Instructions for Authors</a>, which explains how to prepare an article for submission to <em>The R Journal</em>.</p>
+<p>Please read the <a href="share/author-guide.pdf" target="_blank">Instructions for Authors</a>, which explains how to prepare an article for submission to <em>The R Journal</em>.</p>
 
-<p>The following files provide a template for preparing an article for submission to the R Journal:</p>
+<p>The following files provide the mandatory template for preparing an article for submission to the R Journal:</p>
 
 <ul>
-  <li>LaTeX style file: <a href="share/RJournal.sty">RJournal.sty</a>.</li>
+  <li>LaTeX style file: RJournal.sty.</li>
 
-  <li>fake Master LaTeX file: <a href="share/RJwrapper.tex">RJwrapper.tex</a>.</li>
+  <li>fake Master LaTeX file: RJwrapper.tex.</li>
 
-  <li>article template: <a href="share/RJtemplate.tex">RJtemplate.tex</a> (including figure: <a href="share/Rlogo.png">Rlogo.png</a>
-    and bibliography: <a href="share/RJreferences.bib">RJreferences.bib</a>).</li>
+  <li>article template: RJtemplate.tex (including figure: Rlogo-5.png
+    and bibliography: RJreferences.bib).</li>
+  <li>example typeset template file: RJwrapper_orig.pdf.</li>
 </ul>
 
-<p>Download the files into a directory, run tools::texi2pdf inside R a couple of times on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be typeset in an issue of <emph>The R Journal</emph>. You can also download a copy of <a href="share/RJwrapper.pdf">RJwrapper.pdf</a>.</p>
+<p>Download <a href="share/RJtemplate.zip">the zip archive of template files</a> into a directory, run tools::texi2pdf inside R a couple of times on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be typeset in an issue of <emph>The R Journal</emph>.</p>
+
+<p>Submissions not using this template will be rejected without consideration.</p>
 
 <h2>Submit online</h2>
 
