--- a/board.html
+++ b/board.html
@@ -13,7 +13,7 @@ John Verzani, City University of New York, USA<br>
 Norman Matloff, University of California, Davis, USA<br>
 Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
 <p><b>Editorial advisory board:</b><br>
-Bettina Gruen, Johannes Kepler Universität Linz, Austria<br>
+Bettina Grün, Johannes Kepler Universität Linz, Austria<br>
 Deepayan Sarkar, Indian Statistical Institute, Delhi, India<br>
 Friedrich Leisch, University of Natural Resources and Life Sciences, Vienna, Austria<br>
 Hadley Wickham, RStudio, Houston, Texas, USA<br>
