--- a/reviews-etc.html
+++ b/reviews-etc.html
@@ -5,7 +5,7 @@ title: Reviews and Proofreading
 
 <h3>The R Journal: Reviews</h3>
 
-<p>Following acknowledgement by the editor in chief, submissions are considered by the executive editors. Some will be rejected without review as insufficiently relevant for our readership, or of too poor technical quality, for example submissions not following the <a href="share/author-guide.pdf">author guidelines</a>.</p>
+<p>Following acknowledgement by the editor in chief, submissions are considered by the executive editors. Some will be rejected without review as insufficiently relevant for our readership, or of too poor technical quality, for example submissions not following the <a href="share/author-guide.pdf">author guidelines</a>. There are also many resources indicating how package authors may improve their code, for example <a href="https://www.bioconductor.org/developers/how-to/">Bioconductor</a> notes for developers.</p>
 
 <p>If the submission is considered worth sending for review, a handling editor is assigned, and reviewers are identified, invited, and begin work on assessing the submission. When their reports are available, the handling editor may decide to reject, to consult a rejection decision with other editors, to ask for revisions based on the reviews, or to accept. This reviewing process may iterate several times before submissions are either rejected or accepted. If revised submissions are not received within three months of the corresponding author being asked to make revisions, the submission may be considered withdrawn by the editors and rejected.</p>
 
