tightening style file version

--- a/submissions.html
+++ b/submissions.html
@@ -23,7 +23,7 @@ title: Submissions
 
 <p>Download <a href="share/RJtemplate.zip">the zip archive of template files</a> into a directory, run tools::texi2pdf inside R a couple of times on RJwrapper.tex to produce a file RJwrapper.pdf, which shows how the template file would be typeset in an issue of <emph>The R Journal</emph>.</p>
 
-<p>Submissions not using this template will be rejected without consideration.</p>
+<p>Submissions not using this template will be rejected without consideration. Do check that you are using at least version 0.13 of the LaTeX style file: RJournal.sty; the current version is contained in <a href="share/RJtemplate.zip">the zip archive of template files</a>.</p>
 
 <h2>Submit online</h2>
 
