--- a/board.html
+++ b/board.html
@@ -6,13 +6,14 @@ title: Editorial board
 <h1>The R Journal: Editorial board</h1>
 
 <p><b>Editor-in-Chief:</b><br>
-Roger Bivand, Norwegian School of Economics, Bergen, Norway<br><a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
-<p><b>Executive editors:</b><br>
-Michael Lawrence, Genentech, Inc., San Francisco, USA<br>
 John Verzani, City University of New York, USA<br>
+<a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
+<p><b>Executive editors:</b><br>
+Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
 Norman Matloff, University of California, Davis, USA<br>
 Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
 <p><b>Editorial advisory board:</b><br>
+Michael Lawrence, Genentech, Inc., San Francisco, USA<br> 
 Bettina Grün, Johannes Kepler Universität Linz, Austria<br>
 Deepayan Sarkar, Indian Statistical Institute, Delhi, India<br>
 Friedrich Leisch, University of Natural Resources and Life Sciences, Vienna, Austria<br>
