fix Olivias name

--- a/board.html
+++ b/board.html
@@ -11,6 +11,7 @@ John Verzani, City University of New York, USA<br>
 <p><b>Executive editors:</b><br>
 Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
 Norman Matloff, University of California, Davis, USA<br>
+Olivia Lau, Google, USA<br>
 Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
 <p><b>Editorial advisory board:</b><br>
 Michael Lawrence, Genentech, Inc., San Francisco, USA<br> 
