--- a/board.html
+++ b/board.html
@@ -6,15 +6,16 @@ title: Editorial board
 <h1>The R Journal: Editorial board</h1>
 
 <p><b>Editor-in-Chief:</b><br>
-John Verzani, City University of New York, USA<br>
+Norman Matloff, University of California, Davis, USA<br>
 <a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
 <p><b>Executive editors:</b><br>
-Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
-Norman Matloff, University of California, Davis, USA<br>
+John Verzani, City University of New York, USA<br>
 Olivia Lau, Google, USA<br>
+Di Cook, Monash University, Australia<br>
 Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
 <p><b>Editorial advisory board:</b><br>
-Michael Lawrence, Genentech, Inc., San Francisco, USA<br> 
+Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
+Michael Lawrence, Genentech, Inc., San Francisco, USA<br>
 Bettina Grün, Johannes Kepler Universität Linz, Austria<br>
 Deepayan Sarkar, Indian Statistical Institute, Delhi, India<br>
 Friedrich Leisch, University of Natural Resources and Life Sciences, Vienna, Austria<br>
