--- a/board.html
+++ b/board.html
@@ -10,7 +10,7 @@ Norman Matloff, University of California, Davis, USA<br>
 <a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
 <p><b>Executive editors:</b><br>
 John Verzani, City University of New York, USA<br>
-Olivia Lau, Google, USA<br>
+Michael Kane, Yale University, USA <br>
 Di Cook, Monash University, Australia<br>
 Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
 <p><b>Editorial advisory board:</b><br>
