Updating editorial board.

--- a/board.html
+++ b/board.html
@@ -6,12 +6,12 @@ title: Editorial board
 <h1>The R Journal: Editorial board</h1>
 
 <p><b>Editor-in-Chief:</b><br>
-Norman Matloff, University of California, Davis, USA<br>
+Michael Kane, Yale University, USA <br>
 <a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
 <p><b>Executive editors:</b><br>
-John Verzani, City University of New York, USA<br>
-Michael Kane, Yale University, USA <br>
 Di Cook, Monash University, Australia<br>
+Colin Gillespie, New Castle University, United Kingdom<br>
+Catherine Hurley, Maynooth University, Ireland<br>
 Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
 <p><b>Editorial advisory board:</b><br>
 Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
