updated editorial board n web site

--- a/board.html
+++ b/board.html
@@ -10,9 +10,9 @@ Michael Kane, Yale University, USA <br>
 <a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
 <p><b>Executive editors:</b><br>
 Di Cook, Monash University, Australia<br>
-Colin Gillespie, New Castle University, United Kingdom<br>
 Catherine Hurley, Maynooth University, Ireland<br>
-Email of editors: <em>firstname.lastname</em><tt>@r-project.org</tt></p>
+Simon Urbanek, Auckland University, New Zealand<br>
+</p>
 <p><b>Editorial advisory board:</b><br>
 Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
 Michael Lawrence, Genentech, Inc., San Francisco, USA<br>
