--- a/board.html
+++ b/board.html
@@ -11,6 +11,7 @@ Michael Kane, Yale University, USA <br>
 <p><b>Executive editors:</b><br>
 Di Cook, Monash University, Australia<br>
 Catherine Hurley, Maynooth University, Ireland<br>
+Colin Gillespie, New Castle University, United Kingdom<br>
 Simon Urbanek, Auckland University, New Zealand<br>
 </p>
 <p><b>Editorial advisory board:</b><br>
