AE's added and resubmission info update.

--- a/board.html
+++ b/board.html
@@ -14,6 +14,17 @@ Catherine Hurley, Maynooth University, Ireland<br>
 Colin Gillespie, New Castle University, United Kingdom<br>
 Simon Urbanek, Auckland University, New Zealand<br>
 </p>
+<p><b>Associate editors:</b><br>
+Rafael de Andrade Moral, Maynooth University, Ireland<br>
+Taylor Arnold, University of Richmond, USA<br>
+Elizabeth Atkinson, Mayo Clinic, USA<br>
+Xiaoyue Cheng, Univerity of Nebraska Omaha, USA<br>
+Isabella Gollini, University College Dublin, Ireland<br>
+Nicholas Tierney, Rstudio, USA<br>
+Susan Vanderplass, University of Nebraska, Lincoln, USA<br>
+Earo Wang, The University of Aukland, New Zeland<br>
+Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA<br>
+</p>
 <p><b>Editorial advisory board:</b><br>
 Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
 Michael Lawrence, Genentech, Inc., San Francisco, USA<br>
