--- a/submissions.html
+++ b/submissions.html
@@ -34,4 +34,11 @@ form linked below. Note that journal policy changed in early 2017, and submissio
 Editor-in-Chief at
 <code>&lt;r-journal@r-project.org&gt;</code>. </p>
 
-<h3>Submit an article at <a href="https://forms.gle/ykj6QcoGQD5ctnA5A">https://forms.gle/ykj6QcoGQD5ctnA5A</a></h3>
+<h3>R journal resubmissions or revisions</h3>
+
+<p>Resubmission and revisions to accepted articles are received through
+the same site where new submissions are received (link below). When
+providing a resubmission or revision, please enter the identifier of 
+the original submission in the last field of the submission form below.</p>
+
+<h3>Submit an article, resubmission, or revision <a href="https://forms.gle/ykj6QcoGQD5ctnA5A">here</a>.</h3>
