--- a/board.html
+++ b/board.html
@@ -11,18 +11,18 @@ Michael Kane, Yale University, USA <br>
 <p><b>Executive editors:</b><br>
 Di Cook, Monash University, Australia<br>
 Catherine Hurley, Maynooth University, Ireland<br>
-Simon Urbanek, Auckland University, New Zealand<br>
+Simon Urbanek, The University of Auckland, New Zealand<br>
 </p>
 <p><b>Associate editors:</b><br>
 Rafael de Andrade Moral, Maynooth University, Ireland<br>
 Taylor Arnold, University of Richmond, USA<br>
 Elizabeth Atkinson, Mayo Clinic, USA<br>
-Xiaoyue Cheng, Univerity of Nebraska Omaha, USA<br>
-Colin Gillespie, New Castle University, United Kingdom<br>
+Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA<br>
+Colin Gillespie, Newcastle University, UK<br>
 Isabella Gollini, University College Dublin, Ireland<br>
 Nicholas Tierney, Rstudio, USA<br>
 Susan Vanderplass, University of Nebraska, Lincoln, USA<br>
-Earo Wang, The University of Aukland, New Zeland<br>
+Earo Wang, The University of Auckland, New Zeland<br>
 Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA<br>
 </p>
 <p><b>Editorial advisory board:</b><br>
