--- a/board.html
+++ b/board.html
@@ -20,8 +20,8 @@ Elizabeth Atkinson, Mayo Clinic, USA<br>
 Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA<br>
 Colin Gillespie, Newcastle University, UK<br>
 Isabella Gollini, University College Dublin, Ireland<br>
-Nicholas Tierney, Rstudio, USA<br>
-Susan Vanderplass, University of Nebraska, Lincoln, USA<br>
+Nicholas Tierney, Monash University, Australia<br>
+Susan Vanderplas, University of Nebraska, Lincoln, USA<br>
 Earo Wang, The University of Auckland, New Zeland<br>
 Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA<br>
 </p>
