updateed editorial list

--- a/board.html
+++ b/board.html
@@ -26,7 +26,7 @@ Isabella Gollini, University College Dublin, Ireland<br>
 Nicholas Tierney, Telethon Kids, Australia<br>
 Mark van der Loo, Statistics Netherlands, the Netherlands<br>
  Susan Vanderplas, University of Nebraska, Lincoln, USA<br>
-Earo Wang, The University of Auckland, New Zeland<br>
+Earo Wang, The University of Auckland, New Zealand<br>
 Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA<br>
 </p>
 <p><b>Editorial advisory board:</b><br>
