updateed editorial list spacing

--- a/board.html
+++ b/board.html
@@ -7,12 +7,15 @@ title: Editorial board
 
 <p><b>Editor-in-Chief:</b><br>
 Di Cook, Monash University, Australia<br>
-<a href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
+<a
+href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
+
 <p><b>Executive editors:</b><br>
 Catherine Hurley, Maynooth University, Ireland<br>
 Simon Urbanek, The University of Auckland, New Zealand<br>
 Michael Kane, Yale University, USA <br>
 </p>
+
 <p><b>Associate editors:</b><br>
 Rafael de Andrade Moral, Maynooth University, Ireland<br>
 Taylor Arnold, University of Richmond, USA<br>
@@ -29,6 +32,7 @@ Mark van der Loo, Statistics Netherlands, the Netherlands<br>
 Earo Wang, The University of Auckland, New Zealand<br>
 Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA<br>
 </p>
+
 <p><b>Editorial advisory board:</b><br>
 Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
 Michael Lawrence, Genentech, Inc., San Francisco, USA<br>
