finished adding new AEs

--- a/board.html
+++ b/board.html
@@ -26,7 +26,7 @@ Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA<br>
 Katarina Domijan, Maynooth University, Ireland<br>
 Colin Gillespie, Newcastle University, UK<br>
 Isabella Gollini, University College Dublin, Ireland<br>
-Elizabeth Sweeney, Cornell University, USAA</br>
+Elizabeth Sweeney, Cornell University, USA</br>
 Nicholas Tierney, Telethon Kids, Australia<br>
 Mark van der Loo, Statistics Netherlands, the Netherlands<br>
  Susan Vanderplas, University of Nebraska, Lincoln, USA<br>
