Update my affiliation

--- a/board.html
+++ b/board.html
@@ -46,7 +46,7 @@ John Fox, McMaster University, Hamilton, Ontario, Canada<br>
 Kurt Hornik, WU Wirtschaftsuniversität Wien, Vienna, Austria<br>
 Paul Murrell, University of Auckland, New Zealand<br>
 Peter Dalgaard, Copenhagen Business School, Denmark<br>
-Martyn Plummer, International Agency for Research on Cancer, Lyon, France<br>
+Martyn Plummer, University of Warwick, UK<br>
 Vincent Carey, Harvard Medical School, Boston, USA<br>
 Torsten Hothorn, University of Zurich, Switzerland<br>
 </p>
