Add more yaml params for articles

--- a/_issues/2020-1/2020-1.html
+++ b/_issues/2020-1/2020-1.html
@@ -144,9 +144,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   }
 
   d-byline .byline {
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
   }
 
+  /*
   d-byline .byline h3 {
     margin-block-start: 1.5em;
   }
@@ -154,6 +155,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   d-byline .byline .authors-affiliations h3 {
     margin-block-start: 0.5em;
   }
+  */
 
   .authors-affiliations .orcid-id {
     width: 16px;
@@ -164,9 +166,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     padding-bottom: 2px;
   }
 
+
+  d-title h1, d-title p, d-title figure,
+  d-abstract p, d-abstract b {
+    grid-column: page;
+  }
+
   d-title .dt-tags {
     margin-top: 1em;
-    grid-column: text;
+    grid-column: page;
   }
 
   .dt-tags .dt-tag {
@@ -179,7 +187,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     font-size: 70%;
     border: 1px solid rgba(0,0,0,0.2);
     border-radius: 3px;
-    text-transform: uppercase;
+    text-transform: lowercase;
     font-weight: 500;
   }
 
@@ -237,6 +245,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
   d-article>p>img {
     width: 100%;
+  }
+
+  d-article h1 {
+    line-height: 1.1em;
   }
 
   d-article h2 {
@@ -358,9 +370,16 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
       height: 0;
       grid-column-start: 1;
       grid-column-end: 4;
-      justify-self: center;
+      justify-self: end;
+    }
+
+    nav.toc {
       padding-right: 3em;
       padding-left: 2em;
+      border-right: 1px solid rgba(0, 0, 0, 0.1);
+      border-right-width: 1px;
+      border-right-style: solid;
+      border-right-color: rgba(0, 0, 0, 0.1);
     }
   }
 
@@ -802,7 +821,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     font-size: 60%;
     border: 1px solid rgba(0,0,0,0.2);
     border-radius: 3px;
-    text-transform: uppercase;
+    text-transform: lowercase;
     font-weight: 500;
   }
 
@@ -828,7 +847,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     margin-top: 0;
     margin-bottom: 0.5em;
     font-weight: 400;
-    text-transform: uppercase;
+    text-transform: lowercase;
   }
 
   .sidebar-section {
@@ -1033,6 +1052,21 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   }
 
 
+  @keyframes highlight-target {
+    0% {
+      background-color: #ffa;
+    }
+    66% {
+      background-color: #ffa;
+    }
+    100% {
+      background-color: none;
+    }
+  }
+
+  d-article :target, d-appendix :target {
+     animation: highlight-target 3s;
+  }
 
   </style>
 
@@ -1475,11 +1509,18 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
 <div class="d-article">
+<div class="layout-chunk" data-layout="l-body">
+<style type="text/css">
+d-article > * {
+    grid-column: page;
+}
+</style>
+</div>
 <p><a href="RJ-2020-2.pdf">Complete issue <svg viewBox="0 0 384 512" style="height:1em;position:relative;display:inline-block;top:.1em;" xmlns="http://www.w3.org/2000/svg"> <path d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"></path></svg></a></p>
 <p><a href="https://rjournal.github.io/archive/2020-2/index-bib.html">Complete bibliography</a></p>
-<p>Access the article landing page through its title or go straight to the article through the PDF icon:</p>
+<!-- Access the article landing page through its title or go straight to the article through the PDF icon: -->
 <h2 id="table-of-contents">Table of contents</h2>
-<div class="layout-chunk" data-layout="l-body">
+<div class="layout-chunk" data-layout="l-page">
 <p><a href="#">Editorial</a><br>Michael J. Kane 4</p>
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
 <p><a href="#">gk: An R Package for the g-and-k and Generalised g-and-h Distributions</a><br>Dennis Prangle 7</p>
