Add default description for articles feed

--- a/_articles/RJ-2020-027/RJ-2020-027.html
+++ b/_articles/RJ-2020-027/RJ-2020-027.html
@@ -131,7 +131,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["RJ-2020-027_files/anchor-4.2.2/anchor.min.js","RJ-2020-027_files/bowser-1.9.3/bowser.min.js","RJ-2020-027_files/distill-2.2.21/template.v2.js","RJ-2020-027_files/header-attrs-2.6/header-attrs.js","RJ-2020-027_files/header-attrs-2.7/header-attrs.js","RJ-2020-027_files/jquery-1.11.3/jquery.min.js","RJ-2020-027_files/popper-2.6.0/popper.min.js","RJ-2020-027_files/tippy-6.2.7/tippy-bundle.umd.min.js","RJ-2020-027_files/tippy-6.2.7/tippy-light-border.css","RJ-2020-027_files/tippy-6.2.7/tippy.css","RJ-2020-027_files/tippy-6.2.7/tippy.umd.min.js","RJ-2020-027_files/webcomponents-2.0.0/webcomponents.js","RJ-2020-027.pdf"]}
+  {"type":"character","attributes":{},"value":["RJ-2020-027_files/anchor-4.2.2/anchor.min.js","RJ-2020-027_files/bowser-1.9.3/bowser.min.js","RJ-2020-027_files/distill-2.2.21/template.v2.js","RJ-2020-027_files/header-attrs-2.6/header-attrs.js","RJ-2020-027_files/header-attrs-2.7/header-attrs.js","RJ-2020-027_files/header-attrs-2.8/header-attrs.js","RJ-2020-027_files/jquery-1.11.3/jquery.min.js","RJ-2020-027_files/popper-2.6.0/popper.min.js","RJ-2020-027_files/tippy-6.2.7/tippy-bundle.umd.min.js","RJ-2020-027_files/tippy-6.2.7/tippy-light-border.css","RJ-2020-027_files/tippy-6.2.7/tippy.css","RJ-2020-027_files/tippy-6.2.7/tippy.umd.min.js","RJ-2020-027_files/webcomponents-2.0.0/webcomponents.js","RJ-2020-027.pdf"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1486,7 +1486,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="RJ-2020-027_files/header-attrs-2.7/header-attrs.js"></script>
+  <script src="RJ-2020-027_files/header-attrs-2.8/header-attrs.js"></script>
   <script src="RJ-2020-027_files/jquery-1.11.3/jquery.min.js"></script>
   <script src="RJ-2020-027_files/popper-2.6.0/popper.min.js"></script>
   <link href="RJ-2020-027_files/tippy-6.2.7/tippy.css" rel="stylesheet" />
